@@ -1,6 +1,6 @@
 //
 //  ========================================================================
-//  Copyright (c) 1995-2016 Mort Bay Consulting Pty. Ltd.
+//  Copyright (c) 1995-2021 Mort Bay Consulting Pty Ltd and others.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
@@ -28,6 +28,7 @@ import java.util.Collections;
 import java.util.Enumeration;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Properties;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
@@ -54,13 +55,8 @@ import org.eclipse.jetty.util.annotation.ManagedAttribute;
  */
 public class Log
 {
-    public final static String EXCEPTION= "EXCEPTION ";
-    public final static String IGNORED= "IGNORED EXCEPTION ";
-
-    /**
-     * Logging Configuration Properties
-     */
-    protected static final Properties __props;
+    public static final String EXCEPTION = "EXCEPTION ";
+    public static final String IGNORED = "IGNORED EXCEPTION ";
     /**
      * The {@link Logger} implementation class name
      */
@@ -69,68 +65,59 @@ public class Log
      * Legacy flag indicating if {@link Logger#ignore(Throwable)} methods produce any output in the {@link Logger}s
      */
     public static boolean __ignored;
-
     /**
-     * Hold loggers only.
+     * Logging Configuration Properties
      */
-    private final static ConcurrentMap<String, Logger> __loggers = new ConcurrentHashMap<>();
-
+    protected static final Properties __props = new Properties();
+    private static final ConcurrentMap<String, Logger> __loggers = new ConcurrentHashMap<>();
+    private static boolean __initialized;
+    private static Logger LOG;
 
     static
     {
-        /* Instantiate a default configuration properties (empty)
-         */
-        __props = new Properties();
-
         AccessController.doPrivileged(new PrivilegedAction<Object>()
         {
+            @Override
             public Object run()
             {
-                /* First see if the jetty-logging.properties object exists in the classpath.
-                 * This is an optional feature used by embedded mode use, and test cases to allow for early
-                 * configuration of the Log class in situations where access to the System.properties are
-                 * either too late or just impossible.
-                 */
-                loadProperties("jetty-logging.properties",__props);
+                // First see if the jetty-logging.properties object exists in the classpath.
+                // * This is an optional feature used by embedded mode use, and test cases to allow for early
+                // * configuration of the Log class in situations where access to the System.properties are
+                // * either too late or just impossible.
+                loadProperties("jetty-logging.properties", __props);
 
-                /*
-                 * Next see if an OS specific jetty-logging.properties object exists in the classpath. 
-                 * This really for setting up test specific logging behavior based on OS.
-                 */
+                 // Next see if an OS specific jetty-logging.properties object exists in the classpath.
+                 // This really for setting up test specific logging behavior based on OS.
                 String osName = System.getProperty("os.name");
-                // NOTE: cannot use jetty-util's StringUtil as that initializes logging itself.
                 if (osName != null && osName.length() > 0)
                 {
-                    osName = osName.toLowerCase(Locale.ENGLISH).replace(' ','-');
-                    loadProperties("jetty-logging-" + osName + ".properties",__props);
+                    // NOTE: cannot use jetty-util's StringUtil.replace() as it may initialize logging itself.
+                    osName = osName.toLowerCase(Locale.ENGLISH).replace(' ', '-');
+                    loadProperties("jetty-logging-" + osName + ".properties", __props);
                 }
 
-                /* Now load the System.properties as-is into the __props, these values will override
-                 * any key conflicts in __props.
-                 */
+                // Now load the System.properties as-is into the __props,
+                // these values will override any key conflicts in __props.
                 @SuppressWarnings("unchecked")
                 Enumeration<String> systemKeyEnum = (Enumeration<String>)System.getProperties().propertyNames();
                 while (systemKeyEnum.hasMoreElements())
                 {
                     String key = systemKeyEnum.nextElement();
                     String val = System.getProperty(key);
-                    // protect against application code insertion of non-String values (returned as null)
+                    // Protect against application code insertion of non-String values (returned as null).
                     if (val != null)
-                    {
-                        __props.setProperty(key,val);
-                    }
+                        __props.setProperty(key, val);
                 }
 
-                /* Now use the configuration properties to configure the Log statics
-                 */
-                __logClass = __props.getProperty("org.eclipse.jetty.util.log.class","org.eclipse.jetty.util.log.Slf4jLog");
-                __ignored = Boolean.parseBoolean(__props.getProperty("org.eclipse.jetty.util.log.IGNORED","false"));
+                // Now use the configuration properties to configure the Log statics.
+                __logClass = __props.getProperty("org.eclipse.jetty.util.log.class", "org.eclipse.jetty.util.log.Slf4jLog");
+                __ignored = Boolean.parseBoolean(__props.getProperty("org.eclipse.jetty.util.log.IGNORED", "false"));
                 return null;
             }
         });
     }
-    
-    static void loadProperties(String resourceName, Properties props)
+
+    private static void loadProperties(String resourceName, Properties props)
     {
         URL testProps = Loader.getResource(resourceName);
         if (testProps != null)
@@ -143,78 +130,57 @@ public class Log
                 {
                     Object value = p.get(key);
                     if (value != null)
-                    {
-                        props.put(key,value);
-                    }
+                        props.put(key, value);
                 }
             }
             catch (IOException e)
             {
                 System.err.println("[WARN] Error loading logging config: " + testProps);
-                e.printStackTrace(System.err);
+                e.printStackTrace();
             }
         }
     }
 
-    private static Logger LOG;
-    private static boolean __initialized=false;
-
     public static void initialized()
-    {   
+    {
         synchronized (Log.class)
         {
             if (__initialized)
                 return;
             __initialized = true;
 
-            Boolean announce = Boolean.parseBoolean(__props.getProperty("org.eclipse.jetty.util.log.announce", "true"));
-
+            boolean announce = Boolean.parseBoolean(__props.getProperty("org.eclipse.jetty.util.log.announce", "true"));
             try
             {
-                Class<?> log_class = __logClass==null?null:Loader.loadClass(__logClass);
-                if (LOG == null || (log_class!=null && !LOG.getClass().equals(log_class)))
+                Class<?> logClass = Loader.loadClass(Log.class, __logClass);
+                if (LOG == null || !LOG.getClass().equals(logClass))
                 {
-                    LOG = (Logger)log_class.newInstance();
-                    if(announce)
-                    {
-                        LOG.debug("Logging to {} via {}", LOG, log_class.getName());
-                    }
+                    LOG = (Logger)logClass.getDeclaredConstructor().newInstance();
+                    if (announce)
+                        LOG.debug("Logging to {} via {}", LOG, logClass.getName());
                 }
             }
-            catch(Throwable e)
+            catch (Throwable e)
             {
                 // Unable to load specified Logger implementation, default to standard logging.
                 initStandardLogging(e);
             }
 
-            if (announce && LOG!=null)
-            {
-                LOG.info(String.format("Logging initialized @%dms to %s",Uptime.getUptime(),LOG.getClass().getName()));
-            }
+            if (announce && LOG != null)
+                LOG.info(String.format("Logging initialized @%dms to %s", Uptime.getUptime(), LOG.getClass().getName()));
         }
+        Objects.requireNonNull(LOG, "Root Logger may not be null");
     }
 
     private static void initStandardLogging(Throwable e)
     {
-        Class<?> log_class;
-        if(e != null && __ignored)
-        {
-            e.printStackTrace(System.err);
-        }
+        if (__ignored)
+            e.printStackTrace();
 
         if (LOG == null)
-        {
-            log_class = StdErrLog.class;
             LOG = new StdErrLog();
-
-            Boolean announce = Boolean.parseBoolean(__props.getProperty("org.eclipse.jetty.util.log.announce", "true"));
-            if(announce)
-            {
-                LOG.debug("Logging to {} via {}", LOG, log_class.getName());
-            }
-        }
     }
-    
+
     public static Logger getLog()
     {
         initialized();
@@ -226,21 +192,22 @@ public class Log
      * <p>
      * Note that if any classes have statically obtained their logger instance prior to this call, their Logger will not
      * be affected by this call.
-     * 
-     * @param log
-     *            the root logger implementation to set
+     *
+     * @param log the root logger implementation to set
      */
     public static void setLog(Logger log)
     {
-        Log.LOG = log;
-        __logClass=null;
+        Log.LOG = Objects.requireNonNull(log, "Root Logger may not be null");
+        __logClass = null;
     }
 
     /**
      * Get the root logger.
+     *
      * @return the root logger
      */
-    public static Logger getRootLogger() {
+    public static Logger getRootLogger()
+    {
         initialized();
         return LOG;
     }
@@ -263,18 +230,19 @@ public class Log
      * If there is not parent Log, then this call is equivalent to<pre>
      *   Log.setLog(Log.getLogger(name));
      * </pre>
+     *
      * @param name Logger name
      */
     public static void setLogToParent(String name)
     {
         ClassLoader loader = Log.class.getClassLoader();
-        if (loader!=null && loader.getParent()!=null)
+        if (loader != null && loader.getParent() != null)
         {
             try
             {
                 Class<?> uberlog = loader.getParent().loadClass("org.eclipse.jetty.util.log.Log");
-                Method getLogger = uberlog.getMethod("getLogger", new Class[]{String.class});
-                Object logger = getLogger.invoke(null,name);
+                Method getLogger = uberlog.getMethod("getLogger", String.class);
+                Object logger = getLogger.invoke(null, name);
                 setLog(new LoggerLog(logger));
             }
             catch (Exception e)
@@ -291,8 +259,7 @@ public class Log
     /**
      * Obtain a named Logger based on the fully qualified class name.
      *
-     * @param clazz
-     *            the class to base the Logger name off of
+     * @param clazz the class to base the Logger name off of
      * @return the Logger with the given name
      */
     public static Logger getLogger(Class<?> clazz)
@@ -302,6 +269,7 @@ public class Log
 
     /**
      * Obtain a named Logger or the default Logger if null is passed.
+     *
      * @param name the Logger name
      * @return the Logger with the given name
      */
@@ -309,21 +277,30 @@ public class Log
     {
         initialized();
 
-        if(name==null)
-            return LOG;
+        Logger logger = null;
 
-        Logger logger = __loggers.get(name);
-        if(logger==null)
+        // Return root
+        if (name == null)
+            logger = LOG;
+
+        // use cache
+        if (logger == null)
+            logger = __loggers.get(name);
+
+        // create new logger
+        if (logger == null && LOG != null)
             logger = LOG.getLogger(name);
+
+        Objects.requireNonNull(logger, "Logger with name [" + name + "]");
 
         return logger;
     }
 
-    public static ConcurrentMap<String, Logger> getMutableLoggers()
+    static ConcurrentMap<String, Logger> getMutableLoggers()
     {
         return __loggers;
     }
-    
+
     /**
      * Get a map of all configured {@link Logger} instances.
      *
